Add list categories endpoint
